Upload finished project. Add README.md

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       </header>
 
       <div class="timeframes">
-        <p>Daily</p>
-        <p>Weekly</p>
-        <p>Monthly</p>
+        <p class="switch-btn" data-view="daily">Daily</p>
+        <p class="switch-btn" data-view="weekly">Weekly</p>
+        <p class="switch-btn" data-view="monthly">Monthly</p>
       </div>
     </div>
 
@@ -41,12 +41,12 @@
         <div class="card-content">
           <p class="title">Work</p>
           <picture>
-            <img src="./images/icon-ellipsis.svg" alt="">
+            <img src="./images/icon-ellipsis.svg" alt="three dots">
           </picture>
         </div>
-        <div class="card-content weekly">
-          <p class="current-time">32hrs</p>
-          <p class="previous-time">Last week - 36 hrs</p>
+        <div class="card-content card-data">
+          <p class="current-time"></p>
+          <p class="previous-time"></p>
         </div>
       </div>
     </div>
@@ -59,12 +59,12 @@
         <div class="card-content">
           <p class="title">Play</p>
           <picture>
-            <img src="./images/icon-ellipsis.svg" alt="">
+            <img src="./images/icon-ellipsis.svg" alt="three dots">
           </picture>
         </div>
-        <div class="card-content weekly">
-          <p class="current-time">32hrs</p>
-          <p class="previous-time">Last week - 36 hrs</p>
+        <div class="card-content card-data">
+          <p class="current-time"></p>
+          <p class="previous-time"></p>
         </div>
       </div>
     </div>
@@ -77,12 +77,12 @@
         <div class="card-content">
           <p class="title">Study</p>
           <picture>
-            <img src="./images/icon-ellipsis.svg" alt="">
+            <img src="./images/icon-ellipsis.svg" alt="three dots">
           </picture>
         </div>
-        <div class="card-content weekly">
-          <p class="current-time">32hrs</p>
-          <p class="previous-time">Last week - 36 hrs</p>
+        <div class="card-content card-data">
+          <p class="current-time"></p>
+          <p class="previous-time"></p>
         </div>
       </div>
     </div>
@@ -95,12 +95,12 @@
         <div class="card-content">
           <p class="title">Exercise</p>
           <picture>
-            <img src="./images/icon-ellipsis.svg" alt="">
+            <img src="./images/icon-ellipsis.svg" alt="three dots">
           </picture>
         </div>
-        <div class="card-content weekly">
-          <p class="current-time">32hrs</p>
-          <p class="previous-time">Last week - 36 hrs</p>
+        <div class="card-content card-data">
+          <p class="current-time"></p>
+          <p class="previous-time"></p>
         </div>
       </div>
     </div>
@@ -113,12 +113,12 @@
         <div class="card-content">
           <p class="title">Social</p>
           <picture>
-            <img src="./images/icon-ellipsis.svg" alt="">
+            <img src="./images/icon-ellipsis.svg" alt="three dots">
           </picture>
         </div>
-        <div class="card-content weekly">
-          <p class="current-time">32hrs</p>
-          <p class="previous-time">Last week - 36 hrs</p>
+        <div class="card-content card-data">
+          <p class="current-time"></p>
+          <p class="previous-time"></p>
         </div>
       </div>
     </div>
@@ -131,17 +131,19 @@
         <div class="card-content">
           <p class="title">Self Care</p>
           <picture>
-            <img src="./images/icon-ellipsis.svg" alt="">
+            <img src="./images/icon-ellipsis.svg" alt="three dots">
           </picture>
         </div>
-        <div class="card-content weekly">
-          <p class="current-time">32hrs</p>
-          <p class="previous-time">Last week - 36 hrs</p>
+        <div class="card-content card-data">
+          <p class="current-time"></p>
+          <p class="previous-time"></p>
         </div>
       </div>
     </div>
 
   </main>
+
+  <script src="./assets/js/main.js"></script>
 
 </body>
 
